--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "electron": "^20.1.0",
     "fs": "^0.0.1-security",
-    "js-beautify": "^1.14.6"
+    "js-beautify": "^1.14.6",
+    "shift-refactor": "^2.0.0"
   }
 }
